<resources>
    <string name="app_name">CoinMarketCapApi</string>
    <string name="home_page_title">Cryptocurrencies</string>
    <string name="home_page_from">From</string>
    <string name="home_page_to">To        </string>
    <string name="home_page_demo_from_date">10 Nov 2021</string>
    <string name="home_page_demo_to_date">10 Nov 2021</string>
    <string name="name_title">Name</string>
    <string name="price_title">Price</string>
    <string name="market_cap_dominance_title">Market Cap Dominance</string>
    <string name="volume_24h_title">Volume 24h</string>
    <string name="empty_list">An Error Occurred, Please Try Again Later</string>


</resources>